Muda arquivo de variáveis de configuração

--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -1,31 +1,41 @@
-mongo_admin_user =admin
-mongo_db=mfaprovider
-mongo_admin_password=admin
+[default]
+uri=idp2ampto.cafeexpresso.rnp.br
+
+[mongo]
+user=admin
+db=mfaprovider
+password=admin
+#TODO : Checar se precisa mesmo porta no host...
+host=localhost:27017
+port=27017
+
+[fcm]
+br.rnp.xmpp.serverKey=xxxx
+br.rnp.xmpp.senderId=xxxx
+
+[mfap]
+mfapbasepath=conta
+# Endereço do MfaProvider
+idp.mfaprovider.apiHost=https://exemploidp.br/conta/
+## Usuário e senha para autenticação REST configurado no sp.properties do projeto MfaProvider
+idp.mfaprovider.username=admin_mfa
+
+[idp]
 host.name=https://endereco-idp/pathname
 idp.metadata=/opt/shibboleth-idp/metadata/idp-metadata.xml
 restsecurity.user=mfa
 restsecurity.password=mfa
 admin.user=admin
 admin.password=adminmfa
-br.rnp.xmpp.serverKey=xxxx
-br.rnp.xmpp.senderId=xxxx
-mfapbasepath=conta
 dir_base_idp_shibboleth=./
-uri=idp2ampto.cafeexpresso.rnp.br
-# Endereço do MfaProvider
-idp.mfaprovider.apiHost=https://exemploidp.br/conta/
-## Usuário e senha para autenticação REST configurado no sp.properties do projeto MfaProvider
-idp.mfaprovider.username=admin_mfa
-idp.mfaprovider.password=admin_mfa
 
-## nome do SP, a ser utilizado na url (https://<url>/<mfabasepath>)
-mfapbasepath=conta
-
+[tomcat]
 #dir_tomcat_app_config=/etc/tomcat8/Catalina/localhost/
 dir_tomcat_app_config=./
 docBase=/opt/mfaprovider/mfaprovider.war
 #tomcat_server_config=/etc/tomcat8/server.xml
 tomcat_server_config=./server.xml
 
+[apache]
 #Arquivo de configuração do site do idp no apache
 apache_conf_file=/etc/apache2/sites-enabled/01-idp.conf
