Atualiza variáveis e script gerar metadados

--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -19,9 +19,9 @@ mfapbasepath=conta
 idp.mfaprovider.apiHost=https://exemploidp.br/conta/
 ## Usuário e senha para autenticação REST configurado no sp.properties do projeto MfaProvider
 idp.mfaprovider.username=admin_mfa
+host.name=https://idp2ampto.cafeexpresso.rnp.br/
 
 [idp]
-host.name=https://endereco-idp/pathname
 idp.metadata=/opt/shibboleth-idp/metadata/idp-metadata.xml
 restsecurity.user=mfa
 restsecurity.password=mfa
