Atualiza mfaprovider.properties

--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -17,6 +17,7 @@ mfapbasepath=conta
 idp.mfaprovider.apiHost=https://exemploidp.br/conta/
 ## Usuário e senha para autenticação REST configurado no sp.properties do projeto MfaProvider
 idp.mfaprovider.username=admin_mfa
+idp.mfaprovider.password=admin_mfa
 host.name=https://idp2ampto.cafeexpresso.rnp.br/
 
 [idp]
@@ -26,6 +27,7 @@ restsecurity.password=mfa
 admin.user=admin
 admin.password=adminmfa
 dir_base_idp_shibboleth=./
+idp_logo=https://idp2ampto.cafeexpresso.rnp.br/idp/images/logo-instituicao.png
 
 [tomcat]
 #dir_tomcat_app_config=/etc/tomcat8/Catalina/localhost/
