Ajusta script, readme e adiciona arquivos do IdP

--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -1,41 +1,47 @@
 [default]
-uri=idp2ampto.cafeexpresso.rnp.br
+#Altere para o endereco da URI do Idp, sem o https. ex: idp.instituicao.edu.br
+uri=idpexemplo.instituicao.edu.br
 
 [mongo]
+#Defina um usuário e senha para o banco de dados, altere apenas as propriedades user e password, as demais deixar o valor padrão
 user=admin
-db=mfaprovider
 password=admin
+db=mfaprovider
 host=localhost:27017
 
 [fcm]
+#Informações anotadas anteriormente no item 9 do Readme.md (seção: configurações FCM para Diálogo de Confirmação)
+#Substitua por chave herdada do servidor FCM 
 br.rnp.xmpp.serverKey=xxxx
+#Substitua por código do remetente FCM
 br.rnp.xmpp.senderId=xxxx
 
 [mfap]
+#Substitua somente se quiser um pathname diferente do padrão conta (nome a ser acessado pelo usuário para acessar o MfaProvider no Idp). Nesse caso substitua em todo local que tiver informado conta.
 mfapbasepath=conta
-# Endereço do MfaProvider
-idp.mfaprovider.apiHost=https://exemploidp.br/conta/
-## Usuário e senha para autenticação REST configurado no sp.properties do projeto MfaProvider
+#Caminho completo do idp com o pathname ex: https://idp.insituicao.edu.br/conta
+idp.mfaprovider.apiHost=https://idp.insituicao.edu.br/conta
+#Defina um usuário e senha para proteção dos recursos rest
 idp.mfaprovider.username=admin_mfa
 idp.mfaprovider.password=admin_mfa
-host.name=https://idp2ampto.cafeexpresso.rnp.br/
+#Altere com o endereço do idp da instituição
+host.name=https://idp.instituicao.edu.br/
 
 [idp]
+#Endereço do metadata, só altere caso for diferente do padrão
 idp.metadata=/opt/shibboleth-idp/metadata/idp-metadata.xml
-restsecurity.user=mfa
-restsecurity.password=mfa
-admin.user=admin
-admin.password=adminmfa
-dir_base_idp_shibboleth=./
-idp_logo=https://idp2ampto.cafeexpresso.rnp.br/idp/images/logo-instituicao.png
+#Dirtório base do Idp, só altere caso for diferente do padrão
+dir_base_idp_shibboleth=/opt/shibboleth-idp
+#Substitua o idphost com o caminho completo do idp para obter o logo ex: https://idp.insituicao.edu.br/idp/images/logo-instituicao.png
+idp_logo=https://idphost/idp/images/logo-instituicao.png
 
 [tomcat]
-#dir_tomcat_app_config=/etc/tomcat8/Catalina/localhost/
-dir_tomcat_app_config=./
+#Nesta seção, so altere caso os diretórios de configuracoes do tomcat seja diferente do padrão.
+dir_tomcat_app_config=/etc/tomcat8/Catalina/localhost/
 docBase=/opt/mfaprovider/mfaprovider.war
-#tomcat_server_config=/etc/tomcat8/server.xml
-tomcat_server_config=./server.xml
+tomcat_server_config=/etc/tomcat8/server.xml
+
 
 [apache]
-#Arquivo de configuração do site do idp no apache
+#Arquivo de configuração do site do idp no apache, so altere se for diferente do padrão.
 apache_conf_file=/etc/apache2/sites-enabled/01-idp.conf
