ajustes nas variavies dos scripts

--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -22,18 +22,21 @@ mfapbasepath=conta
 #Caminho completo do idp com o pathname ex: https://idp.insituicao.edu.br/conta
 idp.mfaprovider.apiHost=https://idp.insituicao.edu.br/conta
 #Defina um usuário e senha para proteção dos recursos rest
-idp.mfaprovider.username=admin_mfa
-idp.mfaprovider.password=admin_mfa
+restsecurity.user=admin_mfa
+restsecurity.password=admin_mfa
 #Altere com o endereço do idp da instituição
 host.name=https://idp.instituicao.edu.br/
 
 [idp]
 #Endereço do metadata, só altere caso for diferente do padrão
 idp.metadata=/opt/shibboleth-idp/metadata/idp-metadata.xml
-#Dirtório base do Idp, só altere caso for diferente do padrão
+#Diretório base do Idp, só altere caso for diferente do padrão
 dir_base_idp_shibboleth=/opt/shibboleth-idp
 #Substitua o idphost com o caminho completo do idp para obter o logo ex: https://idp.insituicao.edu.br/idp/images/logo-instituicao.png
 idp_logo=https://idphost/idp/images/logo-instituicao.png
+#Defina um usuário e senha para o administrador do IdP
+admin.user=admin_user
+admin.password=admin_pass
 
 [tomcat]
 #Nesta seção, so altere caso os diretórios de configuracoes do tomcat seja diferente do padrão.
