arquivo padrão com base na nova lógica de perguntas para config

--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -1,42 +1,39 @@
 [default]
 #Altere para o endereco da URI do Idp, sem o https. ex: idp.instituicao.edu.br
-uri=idpexemplo.instituicao.edu.br
+uri=
 
 [mongo]
 #Defina um usuário e senha para o banco de dados, altere apenas as propriedades user e password, as demais deixar o valor padrão
-user=admin
-password=admin
+user=
+password=
 db=mfaprovider
 host=localhost:27017
 
 [fcm]
 #Informações anotadas anteriormente no item 9 do Readme.md (seção: configurações FCM para Diálogo de Confirmação)
 #Substitua por chave herdada do servidor FCM 
-br.rnp.xmpp.serverKey=xxxx
+br.rnp.xmpp.serverKey=
 #Substitua por código do remetente FCM
-br.rnp.xmpp.senderId=xxxx
+br.rnp.xmpp.senderId=
 
 [mfap]
 #Substitua somente se quiser um pathname diferente do padrão conta (nome a ser acessado pelo usuário para acessar o MfaProvider no Idp). Nesse caso substitua em todo local que tiver informado conta.
 mfapbasepath=conta
 #Caminho completo do idp com o pathname ex: https://idp.insituicao.edu.br/conta
-idp.mfaprovider.apiHost=https://idp.insituicao.edu.br/conta
+idp.mfaprovider.apiHost=
 #Defina um usuário e senha para proteção dos recursos rest
-restsecurity.user=admin_mfa
-restsecurity.password=admin_mfa
-#Altere com o endereço do idp da instituição
-host.name=https://idp.instituicao.edu.br/
+restsecurity.user=
+restsecurity.password=
+#Altere com o endereço do idp da instituição ex: https://idp.instituicao.edu.br/
+host.name=
 
 [idp]
 #Endereço do metadata, só altere caso for diferente do padrão
 idp.metadata=/opt/shibboleth-idp/metadata/idp-metadata.xml
 #Diretório base do Idp, só altere caso for diferente do padrão
 dir_base_idp_shibboleth=/opt/shibboleth-idp
-#Substitua o idphost com o caminho completo do idp para obter o logo ex: https://idp.insituicao.edu.br/idp/images/logo-instituicao.png
-idp_logo=https://idphost/idp/images/logo-instituicao.png
-#Defina um usuário e senha para o administrador do IdP
-admin.user=admin_user
-admin.password=admin_pass
+#Substitua com o caminho completo do idp para obter o logo ex: https://idp.insituicao.edu.br/idp/images/logo-instituicao.png
+idp_logo=
 
 [tomcat]
 #Nesta seção, so altere caso os diretórios de configuracoes do tomcat seja diferente do padrão.
