Adiciona var sp_dir

--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -45,3 +45,4 @@ tomcat_server_config=/etc/tomcat8/server.xml
 [apache]
 #Arquivo de configuração do site do idp no apache, so altere se for diferente do padrão.
 apache_conf_file=/etc/apache2/sites-enabled/01-idp.conf
+sp_dir=/opt/mfaprovider
