Ajusta uso de urrlib2 sem verificar certificado

--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -47,3 +47,5 @@ tomcat_server_config=/etc/tomcat8/server.xml
 #Arquivo de configuração do site do idp no apache, so altere se for diferente do padrão.
 apache_conf_file=/etc/apache2/sites-enabled/01-idp.conf
 sp_dir=/opt/mfaprovider
+# Use True para indicar que o certificado é autoassinado e False para não
+certificado_autoassinado=True
