Adiciona script para atualização do mfaprovider

--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -27,6 +27,7 @@ restsecurity.user=
 restsecurity.password=
 #Altere com o endereço do idp da instituição ex: https://idp.instituicao.edu.br/
 host.name=
+repositorio = https://git.rnp.br/GT-AMPTo/MfaProvider.git
 
 [idp]
 #Endereço do metadata, só altere caso for diferente do padrão
